--- a/Memorizer/app/src/main/res/layout/sequence_layout.xml
+++ b/Memorizer/app/src/main/res/layout/sequence_layout.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="80dp"
         android:fontFamily="@font/staatliches"
         android:shadowColor="@color/black"
-        android:text="LEVEL: "
+        android:text="LEVEL: 1"
         android:textColor="@android:color/black"
         android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
