--- a/Memorizer/app/src/main/res/drawable/sequence_button.xml
+++ b/Memorizer/app/src/main/res/drawable/sequence_button.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FF5E5E"/>
-    <corners android:radius="25dp"/>
-</shape>
+<level-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:maxLevel="0">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="#FF5E5E" />
+            <corners android:radius="25dp" />
+        </shape>
+    </item>
+    <item android:maxLevel="1">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <solid android:color="@android:color/white" />
+            <corners android:radius="25dp" />
+        </shape>
+    </item>
+</level-list>
