--- a/Memorizer/app/src/main/res/layout/sequence_layout.xml
+++ b/Memorizer/app/src/main/res/layout/sequence_layout.xml
@@ -1,166 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/sequence_layout"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+id/sequence_layout"
     android:background="#FF9494">
 
-    <TextView
-        android:id="@+id/sequence_level"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
-        android:fontFamily="@font/staatliches"
-        android:shadowColor="@color/black"
-        android:text="LEVEL: 1"
-        android:textColor="@android:color/black"
-        android:textSize="50sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <GridLayout
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="30dp"
-        android:columnCount="3"
-        android:rowCount="3"
-        android:useDefaultMargins="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sequence_level"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_weight="0.2"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/sequence_level"
+            android:layout_marginTop="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:fontFamily="@font/staatliches"
+            android:shadowColor="@color/black"
+            android:text="LEVEL: 1"
+            android:textColor="@android:color/black"
+            android:textSize="45sp" />
+    </LinearLayout>
 
-        <Button
-            android:id="@+id/sequence_tile1"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_row="0"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_level"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="100dp"
-            android:background="@drawable/sequence_button"
-            android:textColor="#FF5E5E"
-            app:layout_column="0"
-            app:layout_row="0" />
 
-        <Button
-            android:id="@+id/sequence_tile2"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_level"
-            android:layout_marginTop="100dp"
-            android:layout_toEndOf="@+id/sequence_tile2"
-            android:background="@drawable/sequence_button"
-            app:layout_column="1"
-            app:layout_row="0" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.8"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/sequence_tile3"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_level"
-            android:layout_marginTop="100dp"
-            android:layout_toEndOf="@+id/sequence_tile2"
-            android:background="@drawable/sequence_button"
-            app:layout_column="2"
-            app:layout_row="0" />
+            <Button
+                android:id="@+id/sequence_tile1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button"
+                android:textColor="#FF5E5E" />
 
-        <Button
-            android:id="@+id/sequence_tile4"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_row="1"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile1"
-            android:layout_marginTop="48dp"
-            android:background="@drawable/sequence_button"
-            app:layout_column="0"
-            app:layout_row="1" />
+            <Button
+                android:id="@+id/sequence_tile2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button" />
 
-        <Button
-            android:id="@+id/sequence_tile5"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile2"
-            android:layout_marginTop="48dp"
-            android:layout_toEndOf="@+id/sequence_tile4"
-            android:background="@drawable/sequence_button"
-            app:layout_column="1"
-            app:layout_row="1" />
+            <Button
+                android:id="@+id/sequence_tile3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:layout_below="@+id/sequence_level"
+                android:background="@drawable/sequence_button" />
 
-        <Button
-            android:id="@+id/sequence_tile6"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile3"
-            android:layout_marginTop="48dp"
-            android:layout_toEndOf="@+id/sequence_tile5"
-            android:background="@drawable/sequence_button"
-            app:layout_column="2"
-            app:layout_row="1" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/sequence_tile7"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_row="2"
-            android:layout_rowWeight="1"
-            android:layout_column="0"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile4"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/sequence_button"
-            app:layout_column="0"
-            app:layout_row="2" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/sequence_tile8"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile5"
-            android:layout_marginTop="32dp"
-            android:layout_toEndOf="@+id/sequence_tile7"
-            android:background="@drawable/sequence_button"
-            app:layout_column="1"
-            app:layout_row="2" />
+            <Button
+                android:id="@+id/sequence_tile4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button"
+                android:textColor="#FF5E5E" />
 
-        <Button
-            android:id="@+id/sequence_tile9"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_below="@+id/sequence_tile6"
-            android:layout_marginTop="32dp"
-            android:layout_toEndOf="@+id/sequence_tile8"
-            android:background="@drawable/sequence_button"
-            app:layout_column="2"
-            app:layout_row="2" />
-    </GridLayout>
+            <Button
+                android:id="@+id/sequence_tile5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/sequence_tile6"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:layout_below="@+id/sequence_level"
+                android:background="@drawable/sequence_button" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/sequence_tile7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button"
+                android:textColor="#FF5E5E" />
+
+            <Button
+                android:id="@+id/sequence_tile8"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:background="@drawable/sequence_button" />
+
+            <Button
+                android:id="@+id/sequence_tile9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.1"
+                android:layout_margin = "5dp"
+                android:layout_below="@+id/sequence_level"
+                android:background="@drawable/sequence_button" />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.15"
+        >
+    </LinearLayout>
+
+
+
+</LinearLayout>
